--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
    "devDependencies": {
       "@types/express": "^5.0.2",
       "@types/node": "^22.13.10",
+      "@types/swagger-ui-express": "^4.1.8",
       "ts-node": "^10.9.2",
       "typescript": "^5.8.2"
    },
    "dependencies": {
+      "argon2": "^0.43.0",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
       "pg": "^8.14.1",
       "reflect-metadata": "^0.2.2",
-      "typeorm": "0.3.24"
+      "swagger-jsdoc": "^6.2.8",
+      "swagger-ui-express": "^5.0.1",
+      "typeorm": "0.3.24",
+      "zod": "^3.25.23"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "dev": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
