--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
@@ -26,6 +28,6 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests --coverage"
   }
 }
