--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "isolatedModules": true
    }
 }
