--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
@@ -18,6 +19,7 @@
     "argon2": "^0.43.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
