--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "argon2": "^0.43.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
