--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
   "dependencies": {
@@ -30,7 +31,7 @@
     "zod": "^3.25.23"
   },
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "test": "jest --passWithNoTests --coverage"
   }
