--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
-PORT=
+PORT= # Porta onde o backend irá rodar
 
-POSTGRES_HOST=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
+POSTGRES_HOST= # Host do banco de dados PostgreSQL
+POSTGRES_USER= # Usuário do PostgreSQL
+POSTGRES_PASSWORD= # Senha do PostgreSQL
+POSTGRES_DB= # Nome do banco de dados
+POSTGRES_PORT= # Porta do PostgreSQL
 
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+PGADMIN_DEFAULT_EMAIL= # E-mail padrão do PGAdmin
+PGADMIN_DEFAULT_PASSWORD= # Senha padrão do PGAdmin
 
-JWT_SECRET=
+JWT_SECRET= # Chave secreta para JWT, mesma do frontend
+
+GOOGLE_CLIENT_ID= # Client ID do Google OAuth2
+
+FRONTEND_URL= # URL do frontend para CORS
